# ARU

./: .gitignore  README.md  dockerfileForMac  dockerfileForWindows
aru_venv/: app.py  auth.py  dockerfile  populate.py  requirements.txt  setup.cfg
aru_venv/archive/: CustomTopBar.js  _models.py  api_endpoints copy.py  api_endpoints_v1.py  api_endpoints_v2.py  config.py  mainSearch copy.js
aru_venv/sample_data/: ARU Data Sample.csv  ARU Data Sample.xlsx
aru_venv/src/blueprints/: bp_auth.py  bp_author.py  bp_authorresearch.py  bp_campus.py  bp_category.py  bp_citingpaper.py  bp_departments.py  bp_deptagenda.py  bp_file.py  bp_incentivesapplication.py  bp_incentivesevaluation.py  bp_instagenda.py  bp_keywords.py  bp_notification.py  bp_researchdepartment.py  bp_researchdeptagenda.py  bp_researchers.py  bp_researches.py  bp_researchinstagenda.py  bp_researchkeywords.py  bp_search.py  bp_status.py  bp_student.py  bp_studentresearch.py  bp_users.py
aru_venv/src/db/: engine.py
aru_venv/src/models/: Author.py  AuthorResearch.py  Base.py  Campus.py  Category.py  CitingPaper.py  Departments.py  DeptAgenda.py  File.py  IncentivesApplication.py  IncentivesEvaluation.py  InstAgenda.py  Keywords.py  Notification.py  Research.py  ResearchCiting.py  ResearchDepartment.py  ResearchDeptAgenda.py  ResearchInstAgenda.py  ResearchKeywords.py  Status.py  Student.py  StudentResearch.py  Users.py
aru_venv/tests/authentication/: test_authentication.py
aru_venv/tests/search/: test_search.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
(+149 files in other folders)
