[metadata]
name = aru
version = 1.0dev1
description = Backend for academic research unit database.
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
package_dir=
    =src

[options.packages.find]
where=src